# moet

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
res/: moetrc.sh  style.css
src/: classify.rs  cli.rs  config.rs  handlers.rs  ipc.rs  main.rs  shell_inject.rs  startup.rs  state.rs  watcher.rs
