[package]
name = "moet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
chrono = "0.4.41"
gio = "0.20.11"
glib = "0.20.10"
gtk4 = "0.9.6"
io = "0.0.2"
libc = "0.2.180"
notify = "8.0.0"
regex = "1.12.2"
toml = "0.8"
vte4 = { version = "0.8.0", features = ["v0_70"] }

[dev-dependencies]
tempfile = "3.20.0"
